--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
 <button><a href="stopWatch.html">Stop Watch</a></button> 
+<button><a href="alarm.html">Alarm</a></button>
 
     
     </body>
