--- a/stopWatch.html
+++ b/stopWatch.html
@@ -7,9 +7,15 @@
 
 <body>
     <p class="title">Stop Watch </p>
-    <div id="timer">Placeholder</div>
+  
     <button><a href="index.html">Home</a></button>
-    <script src="script.js"></script>
+    <button id="start">Start</button>
+    <button id="stop">Stop</button>
+    <button id="reset">Reset</button>
+    <div id="timer">0</div>
+
+    
+    <script src="stopWatch.js"></script>
 </body>
 
 </html>
